Changed Add and List methods input from 3 separate data inputs to one big one